--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-  "name": "think1st",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/react-query": "^5.66.0",
-    "axios": "^1.7.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.6"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
-  }
+    "name": "think1st",
+    "private": true,
+    "version": "0.0.0",
+    "homepage": "https://mizdebski77.github.io/think1st/",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "deploy": "gh-pages -d dist",
+        "predeploy": "npm run build"
+    },
+    "dependencies": {
+        "@tailwindcss/vite": "^4.0.6",
+        "@tanstack/react-query": "^5.66.0",
+        "axios": "^1.7.9",
+        "gh-pages": "^6.3.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "tailwindcss": "^4.0.6"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.19.0",
+        "@types/react": "^19.0.8",
+        "@types/react-dom": "^19.0.3",
+        "@vitejs/plugin-react-swc": "^3.5.0",
+        "eslint": "^9.19.0",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.18",
+        "globals": "^15.14.0",
+        "typescript": "~5.7.2",
+        "typescript-eslint": "^8.22.0",
+        "vite": "^6.1.0"
+    }
 }
