--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
     "name": "think1st",
+    "homepage": "https://mizdebski77.github.io/think1st/",
     "private": true,
     "version": "0.0.0",
     "type": "module",
-    "homepage": "https://mizdebski77.github.io/think1st/",
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "deploy": "gh-pages -d dist",
-        "predeploy": "npm run build"
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.0.6",
